inou/prp/tests/errors/cmp_bool_int_ne.prp
/*
:name: cmp_bool_int_ne
:type: error
:error: mixes a bool with an int
:help: == 0
*/
// The `!=` counterpart of cmp_bool_int_eq: a bool vs an int is still a compile
// error, but for `!=` the suggested conversion is `== 0` (so the rewritten
// comparison stays equivalent).
const x    = 0xA
const flag = x#|[0..=3]   // or-reduction → bool
const bit  = x#[2]        // bit-select   → int(min=0, max=1)
const r = flag != bit     // bool != int  → error, hint: `bit == 0`
